Test fixes